@@ -49,6 +49,13 @@
   <project_group>GNOME</project_group>
 
   <releases>
+    <release date="2019-10-05" version="3.34.1">
+      <description>
+        <p>GNOME Calendar 3.34.1 release is here! It contains various important bug fixes and new translations.</p>
+        <p>Thanks to all the contributors that worked on GNOME Calendar!</p>
+      </description>
+    </release>
+
     <release date="2019-09-09" version="3.34.0">
       <description>
         <p>GNOME Calendar 3.34 release is here!</p>
